--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 		"sass": "^1.49.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "run-p api appstart",
+		"api": "json-server --watch ./src/data/db.json --port 5000",
+		"appstart": "react-scripts start",
 		"build": "react-scripts build",
-		"eject": "react-scripts eject",
-		"api": "json-server --watch ./src/data/db.json --port 5000"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -32,5 +33,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"npm-run-all": "^4.1.5"
 	}
 }
